fix: swagger for links
